# OpenDeathValley

./: .gitignore  CMakeLists.txt  README.md
CMakeTests/: FindSDL2.cmake
apps/files_test/: CMakeLists.txt  odv_files_test.c  odv_files_test.h  odv_sdl_test.c  odv_sdl_test.h
components/: CMakeLists.txt
components/files/: CMakeLists.txt  odv_dvd_handler.c  odv_dvd_handler.h  odv_dvf_handler.c  odv_dvf_handler.h  odv_dvm_handler.c  odv_dvm_handler.h  odv_file.c  odv_file.h  odv_fnt_handler.c  odv_fnt_handler.h  odv_fxg_handler.c  odv_fxg_handler.h  odv_image.c  odv_image.h  odv_imagemap.c  odv_imagemap.h  odv_map_handler.c  odv_map_handler.h  odv_resource.h  odv_resource_bttn.c  odv_resource_bttn.h  odv_resource_cur.c  odv_resource_cur.h  odv_resource_handler.c  odv_resource_handler.h  odv_resource_nptf.c  odv_resource_nptf.h  odv_resource_picc.c  odv_resource_picc.h  odv_resource_rdo.c  odv_resource_rdo.h  odv_resource_text.c  odv_resource_togl.c  odv_resource_togl.h  odv_resource_wave.c  odv_resource_wave.h  odv_scb_disassembler.c  odv_scb_disassembler.h  odv_scb_handler.c  (+4 more)
components/files/resource/: odv_resource.h  odv_resource_bttn.c  odv_resource_bttn.h  odv_resource_cur.c  odv_resource_cur.h  odv_resource_handler.c  odv_resource_handler.h  odv_resource_nptf.c  odv_resource_nptf.h  odv_resource_picc.c  odv_resource_picc.h  odv_resource_rdo.c  odv_resource_rdo.h  odv_resource_text.h  odv_resource_togl.c  odv_resource_togl.h
components/picture/: CMakeLists.txt  odv_image.c  odv_image.h  odv_imagemap.c  odv_imagemap.h
components/sdlutil/: CMakeLists.txt  odv_image_to_surface.c  odv_image_to_surface.h
components/util/: CMakeLists.txt  odv_utils.c  odv_utils.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  odv_file.c  odv_file.h
src/resources/: CMakeLists.txt  odv_resource.h  odv_resource_handler.c  odv_resource_handler.h  odv_resource_text.c  odv_resource_text.h  odv_resource_wave.c  odv_resource_wave.h
src/script/: CMakeLists.txt  ODVSCBManager.c  ODVSCBManager.h  odv_scb_disassembler.c  odv_scb_disassembler.h  odv_scb_handler.c  odv_scb_handler.h
src/sounds/: CMakeLists.txt
src/test/: CMakeLists.txt  odv_test.c  odv_test.h
src/utils/: CMakeLists.txt
test/: CMakeLists.txt
